# fastapi-production-starter

./: .env.example  .gitignore  Pasted code.py  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  logger_config.yaml  pyproject.toml  pytest.ini  start.sh
alembic/: env.py
alembic/versions/: bcb3c0f407c6_.py  f35e43008c46_.py
app/: main.py
app/api/: dependencies.py
app/api/dependencies/: auth.py  db.py  services.py
app/api/v1/: __init__.py  camera.py  chat.py  company.py  notification.py  report.py  user.py
app/common/: audit_mixin.py  base_repository.py  schema.py
app/core/: config.py  decorators.py  logger.py
app/database/: connection.py
app/domain/camera/: model.py  repository.py  schema.py  service.py
app/domain/chat/: model.py  repo.py  schema.py  service.py
app/domain/company/: model.py  repository.py  schema.py  service.py
app/domain/notification/: model.py  repository.py  schema.py  service.py
app/domain/report/: model.py  repository.py  schema.py  service.py
app/domain/user/: model.py  repository.py  schema.py  service.py
app/enums/: enums.py
app/exceptions/: exceptions.py
app/infrastructure/redis/: client.py
app/middleware/: cors.py  logging.py  rate_limiter.py
app/utils/: oauth2.py
scripts/: create_admin.py  load_test.py
tests/: conftest.py  test_setup.py
tests/e2e/: test_camera_api.py  test_notification_api.py  test_report_api.py
tests/fixtures/: camera.py  company.py  notification.py
tests/integration/: conftest.py  test_company_api.py  test_user_api.py
tests/integration/fixtures/: report.py  (+1 more)
(+1 files in other folders)
